Fix responsive titles and a problem about scrollbar with aside menu activate

--- a/src/main/webapp/css/responsive.css
+++ b/src/main/webapp/css/responsive.css
@@ -29,6 +29,9 @@ and open the template in the editor.
 }
 
 @media screen and (max-width: 820px){
+    h3{
+        font-size: 20px;
+    }
     header{
         padding: 0;
     }
@@ -41,8 +44,7 @@ and open the template in the editor.
     }
     .menu-principal-box{
         margin-right: -100%;
-        border-left: 5px solid rgba(255, 255, 255, 1);
-        border-right: 5px solid rgba(255, 255, 255, 1);
+        border: 5px solid rgba(255, 255, 255, 0.8);
         height: 100%;
         width: 100%;
         overflow:hidden;
@@ -111,6 +113,9 @@ and open the template in the editor.
 }
 
 @media screen and (max-width: 580px){
+    h3{
+        font-size: 18px;
+    }
     .evento-nome{
         font-size: 50px;
     }
@@ -142,5 +147,9 @@ and open the template in the editor.
 
     #logo-small{ 
         margin: 20px 0 20px 20px;
+    }
+    
+    .menu-principal-box ul.principal-list li.principal-list-item{
+        font-size: 20px;
     }
 }
