--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -32,7 +32,8 @@ p, h1, h2, span, a, li, .low-transparent{
 .article-title{
     padding: 10px 30px 10px 30px;
     border-style: solid;
-    border-width: 0px 0px 2px 0px;
+    border-width: 0px 0px 5px 0px;
+    border-color: rgba(255, 255, 255, 0.8);
     font-size: 28px;
 }
 
